添加实领工资

--- a/src/main/resources/templates/salarymanager/show.html
+++ b/src/main/resources/templates/salarymanager/show.html
@@ -61,49 +61,84 @@
 
     function Generatdata(result) {
         var html = '';
-        var htmlHead = '<tr class="firstTr">' +
-            '<th width="10%" colspan="5">'+result.salaryInfo.salaryDate+'  山西医科大学第六医院职工工资明细表</th>' +
-            '</tr>';
+        if (result.emp_type == 0) {
+            var htmlHead = '<tr class="firstTr">' +
+                '<th width="10%" colspan="5" style="size:40px; height:60px;"><img src="../../static/img/logo.jpeg" width="50px" height="50px" align="center" style="padding-left: 20px;">&nbsp;&nbsp;&nbsp;' + result.salaryInfo.salaryDate + ' 山西医科大学第六医院职工工资明细表</th>' +
+                '</tr>';
+        }else{
+            var htmlHead = '<tr class="firstTr">' +
+                '<th width="10%" colspan="5" style="size:40px; height:60px;"><img src="../../static/img/logo.jpeg" width="50px" height="50px" align="center" style="padding-left: 20px;">&nbsp;&nbsp;&nbsp;' + result.salaryInfo.salaryDate + ' 山西医科大学第六医院合同制职工工资明细表</th>' +
+                '</tr>';
+        }
         html += '<tr>' +
             '<th width="20%">姓名</th>' +
-            '<th width="20%" colspan="2">'+result.salaryInfo.employee.empName+'</th>' +
+            '<th width="20%" colspan="2">' + result.salaryInfo.employee.empName + '</th>' +
             '<th width="20%">职工编号</th>' +
-            '<th width="20%">'+result.salaryInfo.employee.empId+'</th>' +
+            '<th width="20%">' + result.salaryInfo.employee.empId + '</th>' +
             '</tr><tr>' +
             '<th width="20%">身份号</th>' +
-            '<th width="20%" colspan="4">'+result.salaryInfo.employee.empCardNum+'</th></tr>';
+            '<th width="20%" colspan="4">' + (result.salaryInfo.employee.empCardNum == null?'':result.salaryInfo.employee.empCardNum) + '</th></tr>';
         for (var k = 0, length = result.salaryInfo.salaryTypeEmpList.length; k < length; k++) {
             html +=
                 '<tr>' +
-                '<th width="20%">'+result.salaryInfo.salaryTypeEmpList[k].salaryTypeObj.salaryName+'</th>' +
-                '<th width="20%" colspan="2">'+result.salaryInfo.salaryTypeEmpList[k].money/10000+'</th>';
-            if(k+1<length){
+                '<th width="20%">' + result.salaryInfo.salaryTypeEmpList[k].salaryTypeObj.salaryName + '</th>' +
+                '<th width="20%" colspan="2">' + result.salaryInfo.salaryTypeEmpList[k].money / 10000 + '</th>';
+            if (k + 1 < length) {
                 html +=
-                    '<th width="20%">'+result.salaryInfo.salaryTypeEmpList[k+1].salaryTypeObj.salaryName+'</th>' +
-                    '<th width="20%">'+result.salaryInfo.salaryTypeEmpList[k+1].money/10000+'</th>';
+                    '<th width="20%">' + result.salaryInfo.salaryTypeEmpList[k + 1].salaryTypeObj.salaryName + '</th>' +
+                    '<th width="20%">' + result.salaryInfo.salaryTypeEmpList[k + 1].money / 10000 + '</th>';
             }
             html += '</tr>';
             k++;
         }
-        html +=   '<tr><th width="20%">应领工资</th>' +
-            '<th width="20%" colspan="4">'+result.salaryInfo.grossPay/10000+'</th>' +
-            '</tr><tr>' +
-            '<th width="20%">其他奖明细</th>' +
-            '<th width="20%" colspan="4"></th>' +
-            '</tr>'+'<tr>';
-        html +='<th width="20%">序号</th>' +
-            '<th width="20%">金额</th>' +
-            '<th width="20%" colspan="2">内容</th>' +
-            '<th width="20%">归口管理部门</th>' +
-            '</tr>';
-        for(var i=0;i<result.bonusInfo.length;i++){
-            html +='<tr><th width="20%">'+result.bonusInfo[i].id+'</th>' +
-                '<th width="20%">'+result.bonusInfo[i].money+'</th>' +
-                '<th width="20%" colspan="2">'+result.bonusInfo[i].cont+'</th>' +
-                '<th width="20%">'+result.bonusInfo[i].manageDepart+'</th>' +
-                '</tr>';
+        if (result.emp_type == 0) {
+            html += '<tr><th width="20%">应领工资</th>' +
+                '<th width="20%"  colspan="2">' + result.salaryInfo.grossPay / 10000 + '</th>' +
+                '<th width="20%">实领工资</th>' +
+                '<th width="20%">' + result.salaryInfo.netPayroll / 10000 + '</th>'+
+                '</tr><tr><th></th></tr><tr>' +
+                '<th width="20%" style="height: 30px;">其他奖明细</th>' +
+                '<th width="20%" colspan="4"></th>' +
+                '</tr>' + '<tr>';
+        }else{
+            html += '<tr><th width="20%">应领工资</th>' +
+                '<th width="20%" colspan="4">' + result.salaryInfo.grossPay / 10000 + '</th>' +
+                '</tr><tr><th></th></tr><tr>' +
+                '<th width="20%" style="height: 30px;">其他奖明细</th>' +
+                '<th width="20%" colspan="4"></th>' +
+                '</tr>' + '<tr>';
         }
-        $("#usertable").html(htmlHead + html);
+        if(result.bonusInfo.length == 0){
+            html +='<th width="20%" colspan="5">本月无其他奖明细</th></tr>'
+        }else {
+            html += '<th width="20%">序号</th>' +
+                '<th width="20%">金额</th>' +
+                '<th width="20%" colspan="2">内容</th>' +
+                '<th width="20%">归口管理部门</th>' +
+                '</tr>';
+            for (var i = 0; i < result.bonusInfo.length; i++) {
+                a = i+1;
+                html += '<tr><th width="20%">' + a + '</th>' +
+                    '<th width="20%">' + result.bonusInfo[i].money + '</th>' +
+                    '<th width="20%" colspan="2">' + result.bonusInfo[i].cont + '</th>' +
+                    '<th width="20%">' + result.bonusInfo[i].manageDepart + '</th>' +
+                    '</tr>';
+            }
+        }
+
+        if (result.emp_type == 0) {
+            html += '<tr><th></th></tr><tr style="height: 40px;"><th width="20%">组成规则</th>' +
+                '<th width="20%" colspan="4">工资额=保留工资\n</br>' +
+                '职业=工令工资\n</br>' +
+                '煤气费=个税\n</br>' +
+                '各种补贴=煤气补+水补+交通补\n</br>' +
+                '应领工资=应领A卡+B卡\n</br>' +
+                '实领工资=应领工资-煤气费-养老-医疗-失业-公积金</th></br>' +
+                '</tr>';
+            $("#usertable").html(htmlHead + html);
+        } else {
+            $("#usertable").html(htmlHead + html);
+        }
     }
 </script>
 <script src="../../static/js/child.js"></script>
