"身份证号"修改问题

--- a/src/main/resources/templates/salarymanager/show.html
+++ b/src/main/resources/templates/salarymanager/show.html
@@ -76,7 +76,7 @@
             '<th width="20%">职工编号</th>' +
             '<th width="20%">' + result.salaryInfo.employee.empId + '</th>' +
             '</tr><tr>' +
-            '<th width="20%">身份号</th>' +
+            '<th width="20%">身份证号</th>' +
             '<th width="20%" colspan="4">' + (result.salaryInfo.employee.empCardNum == null?'':result.salaryInfo.employee.empCardNum) + '</th></tr>';
         for (var k = 0, length = result.salaryInfo.salaryTypeEmpList.length; k < length; k++) {
             html +=
