--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -390,5 +390,8 @@ input[type='reset']:active, input[type='reset']:focus, .providerView a:hover, .p
     border: 0.5px solid  #e5f2ff;
     line-height: 30px;
 }
-
+#printtable tr th{
+    border: 0.5px solid  #e5f2ff;
+    line-height: 30px;
+}
 
