--- a/src/main/resources/templates/salaryuser/list.html
+++ b/src/main/resources/templates/salaryuser/list.html
@@ -23,7 +23,7 @@
             <input type="button" onclick="search()" value="查询"/>
         </div>
         <!--账单表格 样式和员工信息-->
-        <div class="providerAdd" style="margin: 0px; margin-top: 15px; overflow:scroll; width:96%; height:440px;">
+        <div class="providerAdd" style="margin: 0px; margin-top: 15px; overflow-x: hidden; width:96%; height:440px;">
             <table id='usertable' class="providerTable" cellpadding="0" cellspacing="0">
                 <!--<tr class="firstTrs">-->
                 <!--<th width="10%" colspan="5">****年**月医疗公司职工工资明细表</th>-->
@@ -36,7 +36,9 @@
                 <!--</tr>-->
             </table>
             <div class="providerAddBtn" style="margin-left:40%; width: 100%;">
-                <input type="button" value="下载打印" onclick="Print('.providerTable')"/>
+                <input type="button" value="下载打印" style="display: none" onclick="Print('.providerTable')"/>
+
+                <input type="button" value="下一步" style="display: none" id="next" salayId=""/>
             </div>
         </div>
     </div>
